--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.notification.InfoFragment">
+    tools:context=".view.fragment.notification.InfoFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
