--- a/app/src/main/res/layout/fragment_term.xml
+++ b/app/src/main/res/layout/fragment_term.xml
@@ -2,6 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator_term"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightest_neutral">
@@ -13,17 +14,18 @@
         android:fitsSystemWindows="true"
         android:theme="@style/ToolbarTheme">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
+        <net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="96dp"
             android:fitsSystemWindows="true"
             android:theme="@style/ToolbarTheme"
             app:expandedTitleMargin="16dp"
-            app:expandedTitleTextAppearance="@color/dark"
+            app:expandedTitleTextAppearance="@style/ToolbarTheme"
             app:layout_anchor="@+id/appbar"
             app:layout_anchorGravity="center"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator">
+            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
+            app:maxLines="2">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/term_toolbar"
@@ -37,7 +39,7 @@
                 app:titleTextAppearance="@style/ToolbarTheme"
                 app:titleTextColor="@color/dark" />
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
