--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -38,6 +38,7 @@
         android:text="@string/ojk_registered"
         android:textAlignment="center"
         android:textColor="@color/white"
+        android:fontFamily="@font/ibm_plex_sans_semi_bold"
         android:textSize="13sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
@@ -49,14 +50,13 @@
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:contentDescription="@string/afpi_logo"
         android:scaleType="fitCenter"
         android:src="@drawable/afpi_logo_small"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        android:contentDescription="@string/afpi_logo" />
+        app:layout_constraintStart_toStartOf="@+id/guideline" />
 
     <TextView
         android:id="@+id/textView2"
@@ -68,6 +68,7 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="13sp"
+        android:fontFamily="@font/ibm_plex_sans_semi_bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
