--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -31,7 +31,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imageInitial"
+                android:id="@+id/imageProfile"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="16dp"
@@ -41,7 +41,22 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_faq" />
+                app:srcCompat="@drawable/ic_profile_bg" />
+
+            <TextView
+                android:id="@+id/tv_initial"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:fontFamily="@font/ibm_plex_sans_semi_bold"
+                android:text="T"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:visibility="visible"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
+                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
+                app:layout_constraintStart_toStartOf="@+id/imageProfile"
+                app:layout_constraintTop_toTopOf="@+id/imageProfile" />
 
             <TextView
                 android:layout_width="0dp"
@@ -52,10 +67,10 @@
                 android:text="@string/account_settings"
                 android:textColor="@color/dark"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="@+id/imageInitial"
+                app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageInitial"
-                app:layout_constraintTop_toTopOf="@+id/imageInitial" />
+                app:layout_constraintStart_toEndOf="@+id/imageProfile"
+                app:layout_constraintTop_toTopOf="@+id/imageProfile" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
