--- a/app/src/main/res/layout/activity_setting_account.xml
+++ b/app/src/main/res/layout/activity_setting_account.xml
@@ -91,7 +91,30 @@
                         app:layout_constraintBottom_toBottomOf="@+id/tv_user_email"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/tv_user_name"
-                        app:srcCompat="@drawable/ic_faq" />
+                        app:srcCompat="@drawable/ic_profile_bg" />
+
+                    <TextView
+                        android:id="@+id/tv_initial2"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:fontFamily="@font/ibm_plex_sans_semi_bold"
+                        android:gravity="center"
+                        android:text="T"
+                        android:textColor="@color/white"
+                        android:textSize="32sp"
+                        android:visibility="visible"
+                        app:layout_constraintBottom_toBottomOf="@+id/img_profile_picture"
+                        app:layout_constraintEnd_toEndOf="@+id/img_profile_picture"
+                        app:layout_constraintStart_toStartOf="@+id/img_profile_picture"
+                        app:layout_constraintTop_toTopOf="@+id/img_profile_picture" />
+
+                    <ImageView
+                        android:id="@+id/img_edit_circle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="@+id/img_profile_picture"
+                        app:layout_constraintEnd_toEndOf="@+id/img_profile_picture"
+                        app:srcCompat="@drawable/ic_edit_circle" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
@@ -417,7 +440,7 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
