--- a/app/src/main/res/layout/sheet_password_changed.xml
+++ b/app/src/main/res/layout/sheet_password_changed.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/btSheet_profPic"
+    android:id="@+id/btSheet_passChanged"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/lightest_neutral"
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/sheet_profile_handle"
+            android:id="@+id/sheet_pChanged_handle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -23,18 +23,33 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/sheet_pChanged_ltAnim"
+            android:layout_width="132dp"
+            android:layout_height="132dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sheet_pChanged_handle"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/new_password_done_once" />
+
         <TextView
-            android:id="@+id/sheet_profile_title"
+            android:id="@+id/sheet_pChanged_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/ibm_plex_sans_semi_bold"
-            android:text="@string/profile_picture"
+            android:text="@string/password_changed"
+            android:textAlignment="center"
             android:textColor="@color/dark"
-            android:textSize="30sp"
+            android:textSize="19sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sheet_profile_handle" />
+            app:layout_constraintTop_toBottomOf="@+id/sheet_pChanged_ltAnim" />
 
         <TextView
             android:id="@+id/sheet_profile_desc"
@@ -43,32 +58,17 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="40dp"
             android:alpha="0.5"
             android:fontFamily="@font/ibm_plex_sans"
-            android:text="@string/profile_picture_desc"
+            android:text="@string/password_changed_desc"
+            android:textAlignment="center"
             android:textColor="@color/dark"
             android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sheet_profile_title" />
-
-        <Button
-            android:id="@+id/btn_take_profile_picture"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/button_green"
-            android:fontFamily="@font/ibm_plex_sans_medium"
-            android:text="@string/take_profile_picture"
-            android:textColor="@color/white"
-            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sheet_profile_desc" />
+            app:layout_constraintTop_toBottomOf="@+id/sheet_pChanged_title" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
